--- a/codes/index.html
+++ b/codes/index.html
@@ -31,7 +31,7 @@
         <nav class="masthead-nav">
           <a  href="/device-api/devices">Docs</a>
           <a  href="/device-api/v2">API v2</a>
-          <a href="https://github.com/aisuhua/device-api" target="_blank">GitHub</a>
+          <a href="https://github.com/aisuhua/device-api/tree/gh-pages" target="_blank">GitHub</a>
           <a href="http://aisuhua.github.io/" target="_blank">Blog</a>
         </nav>
       </div>
@@ -87,7 +87,7 @@
 
     <script src="/device-api/js/anchor.min.js"></script>
     <script>
-      var selector = '.markdown-body h2, .markdown-body h3';
+      var selector = '.markdown-body h2, .markdown-body h3, .markdown-body h4';
       addAnchors(selector);
     </script>
   </body>
