--- a/v2/index.html
+++ b/v2/index.html
@@ -434,6 +434,7 @@ Content-Language:zh-cn
   <li>Mailgun Documentation <a href="https://documentation.mailgun.com/">https://documentation.mailgun.com/ </a></li>
   <li>Enchant REST API <a href="http://dev.enchant.com/api/v1">http://dev.enchant.com/api/v1 </a></li>
   <li>微博 API <a href="http://open.weibo.com/wiki/Error_code">http://open.weibo.com/wiki/Error_code</a></li>
+  <li>最佳实践：更好的设计你的 REST API <a href="http://www.ibm.com/developerworks/cn/web/1103_chenyan_restapi/">http://www.ibm.com/developerworks/cn/web/1103_chenyan_restapi/</a></li>
 </ol>
 
 <h2 id="whys">Whys</h2>
